--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
             <img class="profile-picture" src="images/hardy.png" alt="">
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i>Download CV</button>
             </div>
         </section>
 
